# finalfusion-cxx

./: .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTORS  README.md
ci/: script.sh
finalfusion-tf/: CMakeLists.txt
include/finalfusion-cxx/: Embeddings.hh
src/: CMakeLists.txt  Embeddings.cc
tests/: CMakeLists.txt  embedding_lookup.cc  word2vec_lookup.cc
