include(CTest)

file(COPY testdata DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

add_executable(cpp_embedding_lookup embedding_lookup.cc)
target_link_libraries(cpp_embedding_lookup finalfusion_cxx)
add_test(cpp_embedding_lookup cpp_embedding_lookup)

add_executable(cpp_word2vec_lookup word2vec_lookup.cc)
target_link_libraries(cpp_word2vec_lookup finalfusion_cxx)
add_test(cpp_word2vec_lookup cpp_word2vec_lookup)
